feat: add static file serving and release deployment support
- Backend now serves frontend dist/ as static files
- Add backend/README.md and update frontend/README.md
- Add dev.bat for development, update start.bat for release
- Add .env.example for developers

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 AGENTS.md
 CLAUDE.md
 
-# Environment files
+# Environment files (keep .example)
 .env
-.env.*
+!.env.example
 
 # Build outputs
 backend/target/
