feat: 动态ComfyUI URL配置 + 前端状态缓存
- 后端支持运行时动态修改ComfyUI URL (GET/POST /api/comfyui-url)
- 前端自动同步URL到后端，刷新页面保留prompt和参数
- StructuredPrompt组件缓存角色和通用标签
- 修复useWebSocket ESLint错误
- 更新.gitignore忽略exe和临时文件

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ backend/target/
 frontend/dist/
 frontend/node_modules/
 
+# Executables
+*.exe
+
 # Temp files
 *.tmp
 *.log
@@ -21,6 +24,8 @@ cargo_tmp.txt
 webapp-frontend-backup/
 webapp-frontend/
 Page/
+dist/
+models/
 
 # Archives
 *.zip
